--- a/Freesome/Freesome.csproj
+++ b/Freesome/Freesome.csproj
@@ -50,6 +50,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazorise" Version="1.2.1" />
+        <PackageReference Include="Blazorise.Bootstrap" Version="1.2.1" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
     </ItemGroup>
 
