--- a/Freesome/Freesome.csproj
+++ b/Freesome/Freesome.csproj
@@ -68,4 +68,8 @@
       <ProjectReference Include="..\FreesomeShared\FreesomeShared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Components\" />
+    </ItemGroup>
+
 </Project>
